src/test/BadAssert/BadAssert.expected
error: BadAssert.panda:1:15: expected either 'panda.core.String' or 'panda.core.SafetyError', but found 'panda.core.Int8'
1 error
