src/test/BadAssert/BadAssert.panda
assert 5 = 5: 8